--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,10 @@ button {
 	margin-bottom: 20px;
 }
 
+.desknone {
+	display: none;
+}
+
 /*################# HEADER #################*/
 
 .header {
@@ -592,7 +596,8 @@ input:focus {
 .checkbox__text {
 	position: relative;
 	padding: 5px 50px 0 40px;
-	cursor: pointer;
+    cursor: pointer;
+    color: white;
 }
 
 /*################# CONTACTS #################*/
@@ -630,6 +635,10 @@ input:focus {
         background-color: #131313;
     }
   
+    .desknone {
+		display: block;
+	}
+
     .navi {
         display: none;
     }
@@ -763,6 +772,11 @@ input:focus {
         line-height: 19px;
     }
 
+    .input {
+        width: 340px;
+        margin-bottom: 63px;
+    }
+
     .button-play-img {
         margin-top: -25px;
         width: 50px;
@@ -859,17 +873,11 @@ input:focus {
         background-image: none;
         background-repeat: no-repeat;
         background-size: 970px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    /*
-    .tutorial-call {
-        width: 509px;
-        height: 800px;
-        padding-bottom: 27px;
-        margin: 0 auto;
-        background-color: #3f3f3f;
-    }*/
-      
     .location-container {
         max-width: 1170px;
         margin: auto;
