--- a/styles/style.css
+++ b/styles/style.css
@@ -264,8 +264,11 @@ button {
     font-family: 'Yeseva One', serif;
     font-size: 14px;
     line-height: 19px;
-      color: rgba(255, 255, 255, 0.5);
-  }
+  } 
+
+.font-nav {
+    color: rgba(255, 255, 255, 0.5);
+}
   
   .navigation__link:hover {
       color:rgb(163, 163, 230);
